--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   image: ^3.0.2
   pie_chart: ^4.0.1
   url_launcher: ^6.0.3
+  flutter_map: ^0.12.0
+  latlong: ^0.6.1
 
 dev_dependencies:
   flutter_test:
