--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
   url_launcher: ^6.0.3
   flutter_map: ^0.12.0
   latlong: ^0.6.1
-
+  webview_flutter: ^2.0.4
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
