--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,17 +11,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   bottom_navy_bar: ^6.0.0
   cached_network_image: ^3.0.0
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
   image: ^3.0.2
-  pie_chart: ^4.0.1
+  pie_chart: ^5.0.0
   url_launcher: ^6.0.3
   flutter_map: ^0.12.0
   latlong: ^0.6.1
   webview_flutter: ^2.0.4
+  provider: ^5.0.0
+  http: ^0.13.0
   
 dev_dependencies:
   flutter_test:
