--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
 
   bottom_navy_bar: ^6.0.0
+  carousel_slider: ^3.0.0
   cached_network_image: ^3.0.0
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.0.0
@@ -25,7 +26,7 @@ dependencies:
   webview_flutter: ^2.0.4
   provider: ^5.0.0
   http: ^0.13.0
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
